# LayerSharing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.mm
application/: app_delegate.h  app_delegate.mm  client_app.h  client_app.mm  host_app.h  host_app.mm  renderer_app.h  renderer_app.mm  server_app.h  server_app.mm
ipc/: ipc.h  ipc.mm
rendering/: client_gl_layer.h  client_gl_layer.mm  remote_layer_api.h  server_main_window.h  server_main_window.mm
